# UWOCS

./: README.md
backend/: CMakeLists.txt  a.out  binding.gyp  package-lock.json  package.json  server
backend/include/: CoursePlanner.h  DocumentHandler.h  GPACalculator.h  GraduationProgress.h  ScheduleHandler.h
backend/src/: CoursePlanner.cpp  DocumentHandler.cpp  GPACalculator.cpp  GraduationProgress.cpp  ScheduleHandler.cpp  server.cpp
backend/storage/planner/: courses.txt
backend/storage/schedule/: schedule.txt
backend/tests/: test_courseplanner.cpp  test_documenthandler.cpp  test_gpacalculator.cpp  test_graduationprogress.cpp  test_schedulehandler.cpp  test_schedulerhandler.cpp
backend/tests/mocks/: MockDocumentHandler.h  MockScheduleHandler.h
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/Components/: Documents.jsx  MainMenu.jsx
frontend/src/Components/menucomponents/: CoursePlanner.jsx  DocumentRepository.jsx  GPACalculator.jsx  GraduationProgress.jsx  ScheduleManagement.jsx
frontend/src/Components/styles/: ComponentStyles.css  MainMenu.css
frontend/src/contexts/: WebSocketContext.tsx
